# potts

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
src/: CMakeLists.txt
src/Executor/: ThreadPool.h  ThreadPoolExecutor.h
src/POTTS/: Edge.h  Helper.h  IEdge.h  INode.h  ITask.h  Metafunctions.h  Node.h  Task.h
tests/: CMakeLists.txt  main.cpp  stress_test_dependent_tasks.cpp  stress_test_independent_tasks.cpp  stress_test_pooled_executor.cpp  stress_test_thread_pool.cpp  stress_test_utils.h  test_auto_reachability.cpp  test_edge.cpp  test_function_traits.cpp  test_metafunctions.cpp  test_node.cpp  test_pooled_task_executor.cpp  test_task.cpp  test_thread_pool.cpp  test_void_task.cpp
tools/: format.py
tools/conan/profiles/: clang-debug  clang-release  gcc-debug  gcc-release
